Polished + MD Page

--- a/public/pdf.ejs
+++ b/public/pdf.ejs
@@ -22,7 +22,7 @@
             width: 50%;
         }
         .pdfWrapper > h1 {
-            color: #f8893a;
+            color: #000000;
         }
         .pdfWrapper > iframe {
             width: 100%;
@@ -31,7 +31,7 @@
         }
         .pdfWrapper > a {
             margin-top: 15px;
-            color: #fbb584;
+            color: #707070;
             text-decoration: none;
         }
     </style>
